# arcadia_engine_cpp

./: CMakeLists.txt  CMakePresets.json  Main.cpp  README.md
assets/shaders/: fragment_shader.frag  test_fragment_shader.frag  test_vertex_shader.vert
include/: Game.h  Logging.h  Renderer.h
src/: Actor.cpp  ArrayMesh.cpp  Camera.cpp  Component.cpp  Game.cpp  Game.h  InputMouse.cpp  Logging.cpp  Matrix.cpp  Mesh.cpp  PlaneActor.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Sprite.cpp  Texture.cpp  Vector.cpp  VertexArray.cpp  glad.c
src/assets/shaders/: BasicMeshFrag.glsl  BasicMeshVert.glsl  SpriteFrag.glsl  SpriteVert.glsl  basic.vert  tex_frag.glsl  tex_vert.glsl  vertex_shader.vert
src/components/: InputComponent.cpp  MeshComponent.cpp  MoveComponent.cpp  SpriteComponent.cpp
src/components/include/: InputComponent.h  MeshComponent.h  MoveComponent.h  SpriteComponent.h
src/include/: Actor.h  ArrayMesh.h  Blocks.h  Camera.h  Color.h  Component.h  Config.h  Game.h  InputMouse.h  Logging.h  Math.h  Matrix.h  Mesh.h  Object.h  PlaneActor.h  Quaternion.h  Random.h  Renderer.h  Shader.h  Sprite.h  Texture.h  Types.h  Vector.h  VertexArray.h
src/world/: Chunk.cpp
src/world/include/: Chunk.h
